--- a/SaafiLogistics/Properties/launchSettings.json
+++ b/SaafiLogistics/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -10,7 +10,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "workingDirectory": "C:\\Users\\Hakim\\Desktop\\CSharp Projects\\SaafiLogistics",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
