--- a/SaafiLogistics/SaafiLogistics.csproj
+++ b/SaafiLogistics/SaafiLogistics.csproj
@@ -18,5 +18,8 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Models\Date.cs" />
+  </ItemGroup>
 
 </Project>
